# felyx

./: CMakeLists.txt  README.md  felyx.files  felyx.includes
apps/: FrequencyFELyX.cpp  LCMFELyX.cpp  StaticFELyX.cpp
data/: 3TubesStringList.params  3TubesStringListOrig.objectives  3TubesStringListOrig.params  DoubleListOrig.params  DucatiFrameFEModel.ansys  DucatiFrameOrig.objectives  DucatiFrameSolution.ansys  LcmModel-Solid55-3541e.ansys  StructModel-3Dmix-1131e.ansys  StructModel-3Dmix-1131e.ansysres  StructModel-3Dmix.mac  StructModel-3Dmix.x_t  StructModel-PrescribedDisplacements.ansys  StructModel-PrescribedDisplacements.ansysres  StructModel-PrescribedDisplacements.felyxres  StructModel-Winschhebel.ansysres  felyx-winschhebel.ansys
doc/: AUTHORS  Doxyfile  NEWS  README  README.cygwin  SimpleFEmodel.txt  felyx_tutorial.odp  felyx_tutorial.sxi  myFirstNodeList.txt
src/: ApplyBoundCons.hpp  Bandwidth.h  BandwidthWrapper.cc  BandwidthWrapper.h  BaseBeam.cc  BaseBeam.h  BaseShell.cc  (+129 more)
src/itl/: Makefile.am  itl.h  matrix_free_operator.h
src/itl/interface/: Makefile.am  blas.h  blas_parallel.h  blitz.h  mtl.h  mtl_parallel.h
src/itl/interface/detail/: Makefile.am  blas_classical_gram_schmidt.h  mtl_classical_gram_schmidt.h
src/itl/krylov/: Makefile.am  cg.h
src/itl/preconditioner/: Makefile.am  cholesky.h  ldl_cholesky.h  ldl_ict.h  ldl_robust_ict.h  ldl_shift_ict.h  modified_cholesky.h  sainv.h
src/itl/preconditioner/detail/: Makefile.am  preconditioner.h
src/mtl/: Makefile.am  README-mtl-modifications  array2D.h  compressed1D.h  compressed_iter.h  dense2D.h  dense_iterator.h  entry.h  envelope2D.h  light1D.h  linalg_vec.h  lu.h  matrix.h  matrix_implementation.h  matrix_market_stream.h  mtl.h  mtl2lapack.h  mtl_algo.h  mtl_config.h  mtl_felyx_utils.h  mtl_set.h  norm.h  oned_part.h  rect_indexer.h  refcnt_ptr.h  sparse1D.h  uplo.h  utils.h
src/mtl/mtl-specializations/: COPYRIGHT  ChangeLog  Makefile.am  cgen.py  mtl_specializations.cc  mtl_specializations.h  specialize-mtl-atlas.py  specialize-mtl.py
(+23 files in other folders)
