INCLUDES = 
METASOURCES = AUTO
itl_HEADERS = givens_rotation.h Iteration_concept.h itl_config.h\
	itl_config.h.in itl.h itl_tags.h itl_utils.h Matrix_concept.h\
	matrix_free_operator.h modified_gram_schmidt.h number_traits.h\
	Preconditioner_concept.h
  
itldir = $(includedir)/felyx/itl
  
SUBDIRS = interface krylov preconditioner
