INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/mtl/mtl-specializations
METASOURCES = AUTO
lib_LIBRARIES = libmtl.a
libmtl_a_SOURCES = mtl_specializations.cc
libmtlincdir = $(includedir)/felyx/mtl/mtl-specializations
libmtlinc_HEADERS = mtl_specializations.h
EXTRA_DIST = cgen.py ChangeLog COPYRIGHT specialize-mtl-atlas.py specialize-mtl.py
